Landing page done

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <title> Bulkit :: Features</title>
-    <link rel="icon" type="image/png" href="assets/img/favicon.png" />
+    <link rel="icon" type="image/png" href="precompiled/assets/img/favicon.png" />
 
     <!--Core CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/bulma.css">
-    <link rel="stylesheet" href="assets/css/app.css">
-    <link id="theme-sheet" rel="stylesheet" href="assets/css/core.css">
+    <link rel="stylesheet" href="precompiled/assets/css/bulma.css">
+    <link rel="stylesheet" href="precompiled/assets/css/app.css">
+    <link id="theme-sheet" rel="stylesheet" href="precompiled/assets/css/core.css">
 
 </head>
 
@@ -103,7 +103,7 @@
                     </div>
                     <div class="column is-9 is-offset-1">
                         <figure class="image is-3by2 hero-figure is-pushed">
-                            <img class="has-light-shadow" src="assets/img/graphics/apps/app-2-core.png" data-base-url="assets/img/graphics/apps/app-2" data-extension=".png" alt="">
+                            <img class="has-light-shadow" src="precompiled/assets/img/graphics/apps/app-2-core.png" data-base-url="precompiled/assets/img/graphics/apps/app-2" data-extension=".png" alt="">
                         </figure>
                     </div>
 
@@ -257,7 +257,7 @@
                 </div>
 
                 <div class="column is-6 has-text-centered">
-                    <img class="featured-svg" src="assets/img/graphics/widgets/mini-widget-1-core.png" data-base-url="assets/img/graphics/widgets/mini-widget-1" data-extension=".png" alt="">
+                    <img class="featured-svg" src="precompiled/assets/img/graphics/widgets/mini-widget-1-core.png" data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-1" data-extension=".png" alt="">
                 </div>
 
                 <div class="column is-4 is-offset-1 is-hidden-mobile">
@@ -292,7 +292,7 @@
                 </div>
 
                 <div class="column is-6 is-offset-1 has-text-centered">
-                    <img class="featured-svg" src="assets/img/graphics/widgets/mini-widget-2-core.png" data-base-url="assets/img/graphics/widgets/mini-widget-2" data-extension=".png" alt="">
+                    <img class="featured-svg" src="precompiled/assets/img/graphics/widgets/mini-widget-2-core.png" data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-2" data-extension=".png" alt="">
                 </div>
             </div>
         </div>
@@ -317,7 +317,7 @@
                 </div>
 
                 <div class="column is-6 has-text-centered">
-                    <img class="featured-svg" src="assets/img/graphics/widgets/mini-widget-3-core.png" data-base-url="assets/img/graphics/widgets/mini-widget-3" data-extension=".png" alt="">
+                    <img class="featured-svg" src="precompiled/assets/img/graphics/widgets/mini-widget-3-core.png" data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-3" data-extension=".png" alt="">
                 </div>
 
                 <div class="column is-4 is-offset-1 is-hidden-mobile">
@@ -352,7 +352,7 @@
                 </div>
 
                 <div class="column is-6 is-offset-1 has-text-centered">
-                    <img class="featured-svg-lg" src="assets/img/graphics/widgets/mini-widget-4-core.png" data-base-url="assets/img/graphics/widgets/mini-widget-4" data-extension=".png" alt="">
+                    <img class="featured-svg-lg" src="precompiled/assets/img/graphics/widgets/mini-widget-4-core.png" data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-4" data-extension=".png" alt="">
                 </div>
             </div>
             <div class="has-text-centered is-title-reveal pt-20 pb-20">
@@ -380,7 +380,7 @@
                         <p class="mb-20 is-tablet-padded body-color">Lorem ipsum dolor sit amet, clita laoreet ne cum. His cu harum
                             inermis iudicabit.</p>
                         <div class="feature-sm">
-                            <img class="is-card-reveal" src="assets/img/graphics/widgets/mini-widget-6-core.png" data-base-url="assets/img/graphics/widgets/mini-widget-6" data-extension=".png" alt="">
+                            <img class="is-card-reveal" src="precompiled/assets/img/graphics/widgets/mini-widget-6-core.png" data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-6" data-extension=".png" alt="">
                         </div>
                     </div>
                     <div class="column is-4 has-text-centered">
@@ -388,7 +388,7 @@
                         <p class="mb-20 is-tablet-padded body-color">Lorem ipsum dolor sit amet, clita laoreet ne cum. His cu harum
                             inermis iudicabit.</p>
                         <div class="feature-sm">
-                            <img class="is-card-reveal" src="assets/img/graphics/widgets/mini-widget-5-core.png" data-base-url="assets/img/graphics/widgets/mini-widget-5" data-extension=".png" alt="">
+                            <img class="is-card-reveal" src="precompiled/assets/img/graphics/widgets/mini-widget-5-core.png" data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-5" data-extension=".png" alt="">
                         </div>
                     </div>
                     <div class="column is-4 has-text-centered">
@@ -396,7 +396,7 @@
                         <p class="mb-20 is-tablet-padded body-color">Lorem ipsum dolor sit amet, clita laoreet ne cum. His cu harum
                             inermis iudicabit.</p>
                         <div class="feature-sm">
-                            <img class="is-card-reveal" src="assets/img/graphics/widgets/mini-widget-7.png" alt="">
+                            <img class="is-card-reveal" src="precompiled/assets/img/graphics/widgets/mini-widget-7.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -460,7 +460,7 @@
                             <div class="card-image">
                                 <div class="card-image-overlay primary"></div>
                                 <figure class="image is-4by3 zoomOut">
-                                    <img src="https://via.placeholder.com/1280x960" alt="" data-demo-src="assets/img/demo/kit/posts/data-insight.jpeg">
+                                    <img src="https://via.placeholder.com/1280x960" alt="" data-demo-src="precompiled/assets/img/demo/kit/posts/data-insight.jpeg">
                                 </figure>
                             </div>
                             <div class="card-content">
@@ -480,7 +480,7 @@
                             <div class="card-image">
                                 <div class="card-image-overlay"></div>
                                 <figure class="image is-4by3 zoomOut">
-                                    <img src="https://via.placeholder.com/1280x960" alt="" data-demo-src="assets/img/demo/kit/posts/blog.jpeg">
+                                    <img src="https://via.placeholder.com/1280x960" alt="" data-demo-src="precompiled/assets/img/demo/kit/posts/blog.jpeg">
                                 </figure>
                             </div>
                             <div class="card-content">
@@ -500,7 +500,7 @@
                             <div class="card-image">
                                 <div class="card-image-overlay"></div>
                                 <figure class="image is-4by3 zoomOut">
-                                    <img src="https://via.placeholder.com/1280x960" alt="" data-demo-src="assets/img/demo/kit/posts/laptop-living.jpeg">
+                                    <img src="https://via.placeholder.com/1280x960" alt="" data-demo-src="precompiled/assets/img/demo/kit/posts/laptop-living.jpeg">
                                 </figure>
                             </div>
                             <div class="card-content">
@@ -536,47 +536,23 @@
                         <div class="column"></div>
                         <!-- Client -->
                         <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/gutwork.svg" alt=""></a>
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/gutwork.svg" alt=""></a>
                         </div>
                         <!-- Client -->
                         <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/phasekit.svg" alt=""></a>
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/phasekit.svg" alt=""></a>
                         </div>
                         <!-- Client -->
                         <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/grubspot.svg" alt=""></a>
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/grubspot.svg" alt=""></a>
                         </div>
                         <!-- Client -->
                         <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/taskbot.svg" alt=""></a>
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/taskbot.svg" alt=""></a>
                         </div>
                         <!-- Client -->
                         <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/systek.svg" alt=""></a>
-                        </div>
-                        <div class="column"></div>
-                    </div>
-                    <div class="columns is-vcentered is-separator">
-                        <div class="column"></div>
-                        <!-- Client -->
-                        <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/infinite.svg" alt=""></a>
-                        </div>
-                        <!-- Client -->
-                        <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/tribe.svg" alt=""></a>
-                        </div>
-                        <!-- Client -->
-                        <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/powerball.svg" alt=""></a>
-                        </div>
-                        <!-- Client -->
-                        <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/kromo.svg" alt=""></a>
-                        </div>
-                        <!-- Client -->
-                        <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/covenant.svg" alt=""></a>
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/systek.svg" alt=""></a>
                         </div>
                         <div class="column"></div>
                     </div>
@@ -584,23 +560,47 @@
                         <div class="column"></div>
                         <!-- Client -->
                         <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/bitbreaker.svg" alt=""></a>
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/infinite.svg" alt=""></a>
                         </div>
                         <!-- Client -->
                         <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/evently.svg" alt=""></a>
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/tribe.svg" alt=""></a>
                         </div>
                         <!-- Client -->
                         <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/proactive.svg" alt=""></a>
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/powerball.svg" alt=""></a>
                         </div>
                         <!-- Client -->
                         <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/transfuseio.svg" alt=""></a>
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/kromo.svg" alt=""></a>
                         </div>
                         <!-- Client -->
                         <div class="column">
-                            <a><img class="client" src="assets/img/logos/custom/livetalk.svg" alt=""></a>
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/covenant.svg" alt=""></a>
+                        </div>
+                        <div class="column"></div>
+                    </div>
+                    <div class="columns is-vcentered is-separator">
+                        <div class="column"></div>
+                        <!-- Client -->
+                        <div class="column">
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/bitbreaker.svg" alt=""></a>
+                        </div>
+                        <!-- Client -->
+                        <div class="column">
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/evently.svg" alt=""></a>
+                        </div>
+                        <!-- Client -->
+                        <div class="column">
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/proactive.svg" alt=""></a>
+                        </div>
+                        <!-- Client -->
+                        <div class="column">
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/transfuseio.svg" alt=""></a>
+                        </div>
+                        <!-- Client -->
+                        <div class="column">
+                            <a><img class="client" src="precompiled/assets/img/logos/custom/livetalk.svg" alt=""></a>
                         </div>
                         <div class="column"></div>
                     </div>
@@ -759,13 +759,13 @@
     <div id="backtotop"><a href="#"></a></div>
   
     <!-- Concatenated jQuery and plugins -->
-    <script src="assets/js/app.js"></script>
+    <script src="precompiled/assets/js/app.js"></script>
 
     <!-- Bulkit js -->
-    <script src="assets/js/functions.js"></script>
-    <script src="assets/js/auth.js"></script>
-    <script src="assets/js/contact.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="precompiled/assets/js/functions.js"></script>
+    <script src="precompiled/assets/js/auth.js"></script>
+    <script src="precompiled/assets/js/contact.js"></script>
+    <script src="precompiled/assets/js/main.js"></script>
 
     <!-- Landing page js -->
 </body>
