--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title> Bulkit :: Features</title>
-    <link rel="icon" type="image/png" href="precompiled/assets/img/favicon.png" />
+    <title>HypeMail</title>
 
     <!--Core CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -29,7 +28,7 @@
                 <!-- Brand -->
                 <div class="navbar-brand">
                     <a class="navbar-item"  href="/">
-                        <p style="font-size: 25px; font-weight: 600;">HYPEMAIL</p>
+                        <p style="font-size: 25px; font-weight: 600;">HypeMail</p>
                     </a>
 
                     
@@ -723,7 +722,7 @@
                 <div class="column">
                     <div class="footer-column">
                         <div class="footer-logo">
-                            <p style="font-size: 25px; font-weight: 600;">HYPEMAIL</p>
+                            <p style="font-size: 25px; font-weight: 600;">HypeMail</p>
                         </div>
                         <div class="footer-header">
                             <nav class="level is-mobile">
