--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <!--Core CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="precompiled/assets/css/bulma.css">
     <link rel="stylesheet" href="precompiled/assets/css/app.css">
     <link id="theme-sheet" rel="stylesheet" href="precompiled/assets/css/core.css">
@@ -28,7 +30,7 @@
                 <!-- Brand -->
                 <div class="navbar-brand">
                     <a class="navbar-item"  href="/">
-                        <p style="font-size: 25px; font-weight: 600;">HypeMail</p>
+                        <p style="font-size: 25px; font-weight: 600; font-family: 'Raleway', sans-serif;">HYPEMAIL</p>
                     </a>
 
                     
@@ -722,7 +724,7 @@
                 <div class="column">
                     <div class="footer-column">
                         <div class="footer-logo">
-                            <p style="font-size: 25px; font-weight: 600;">HypeMail</p>
+                            <p style="font-size: 25px; font-weight: 600; font-family: 'Raleway', sans-serif;">HYPEMAIL</p>
                         </div>
                         <div class="footer-header">
                             <nav class="level is-mobile">
