--- a/index.html
+++ b/index.html
@@ -630,14 +630,14 @@
             </div>
 
             <div class="content-wrapper giant-pb">
-                <form>
+                <form action="https://formspree.io/f/xjvpzrjn" method="POST">
                     <div class="columns">
                         <div class="column is-8 is-offset-2">
                             <div class="columns is-vcentered">
                                 <div class="column is-3">
                                     <!-- Form field -->
                                     <div class="control-material is-primary">
-                                        <input class="material-input" type="text" required>
+                                        <input class="material-input" type="text" name="name" required>
                                         <span class="material-highlight"></span>
                                         <span class="bar"></span>
                                         <label>Name *</label>
@@ -646,7 +646,7 @@
                                 <div class="column is-3">
                                     <!-- Form field -->
                                     <div class="control-material is-primary">
-                                        <input class="material-input" type="text" required>
+                                        <input class="material-input" type="text" name="_replyto" required>
                                         <span class="material-highlight"></span>
                                         <span class="bar"></span>
                                         <label>Email *</label>
@@ -655,14 +655,14 @@
                                 <div class="column is-3">
                                     <!-- Form field -->
                                     <div class="control-material is-primary">
-                                        <input class="material-input" type="text" required>
+                                        <input class="material-input" type="text" name="company" required>
                                         <span class="material-highlight"></span>
                                         <span class="bar"></span>
                                         <label>Company *</label>
                                     </div>
                                 </div>
                                 <div class="column is-3">
-                                    <button type="submit" class="button button-cta btn-align primary-btn btn-outlined is-bold rounded raised no-lh">Sign
+                                    <button type="submit" value="Send" class="button button-cta btn-align primary-btn btn-outlined is-bold rounded raised no-lh">Sign
                                         me up</button>
                                 </div>
                             </div>
