added favicon icons

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
     <title>HypeMail</title>
 
+    <link rel="icon" href="./precompiled/assets/img/hypeMailLogo.png" type="image/x-icon" />
     <!--Core CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">    
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="precompiled/assets/css/bulma.css">
     <link rel="stylesheet" href="precompiled/assets/css/app.css">
     <link id="theme-sheet" rel="stylesheet" href="precompiled/assets/css/core.css">
