404-ed links removed and changed the form and content

--- a/index.html
+++ b/index.html
@@ -57,18 +57,17 @@
                 <div class="navbar-menu">
                     <!-- Navbar Start -->
                     <div class="navbar-start">
-                        <!-- Navbar item -->
+                        <!-- Navbar item
                         <a class="navbar-item is-slide" href="kit1-features.html">
                             Features
                         </a>
-                        <!-- Navbar item -->
+                        
                         <a class="navbar-item is-slide" href="kit1-pricing.html">
                             Pricing
                         </a>
-                        <!-- Navbar item -->
                         <a class="navbar-item is-slide" href="kit1-login.html">
                             Login
-                        </a>
+                        </a> -->
                     </div>
 
                     <!-- Navbar end -->
@@ -602,17 +601,17 @@ intrigue. And automation that excites.
             <div class="section-title-wrapper has-text-centered">
                 <div class="bg-number">6</div>
                 <h2 class="section-title-landing">
-                    Start your Free trial
+                    Get notified when we launch
                 </h2>
-                <h4>Dont struggle anymore to manage tasks. Everything is easy to setup</h4>
+                <h4>Enter your email and we will put you on the waiting list.</h4>
             </div>
 
             <div class="content-wrapper giant-pb">
                 <form action="https://formspree.io/f/xjvpzrjn" method="POST">
                     <div class="columns">
-                        <div class="column is-8 is-offset-2">
+                        <div class="column is-10 is-offset-2">
                             <div class="columns is-vcentered">
-                                <div class="column is-3">
+                                <div class="column is-4">
                                     <!-- Form field -->
                                     <div class="control-material is-primary">
                                         <input class="material-input" type="text" name="name" required>
@@ -621,7 +620,7 @@ intrigue. And automation that excites.
                                         <label>Name *</label>
                                     </div>
                                 </div>
-                                <div class="column is-3">
+                                <div class="column is-4">
                                     <!-- Form field -->
                                     <div class="control-material is-primary">
                                         <input class="material-input" type="text" name="_replyto" required>
@@ -630,16 +629,16 @@ intrigue. And automation that excites.
                                         <label>Email *</label>
                                     </div>
                                 </div>
-                                <div class="column is-3">
-                                    <!-- Form field -->
+                                <!-- <div class="column is-3">
+                                   
                                     <div class="control-material is-primary">
                                         <input class="material-input" type="text" name="company" required>
                                         <span class="material-highlight"></span>
                                         <span class="bar"></span>
                                         <label>Company *</label>
                                     </div>
-                                </div>
-                                <div class="column is-3">
+                                </div> -->
+                                <div class="column is-4">
                                     <button type="submit" value="Send" class="button button-cta btn-align primary-btn btn-outlined is-bold rounded raised no-lh">Sign
                                         me up</button>
                                 </div>
