--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
     <link rel="icon" href="./precompiled/assets/img/hypeMailLogo.png" type="image/x-icon" />
     <!--Core CSS -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="precompiled/assets/css/bulma.css">
     <link rel="stylesheet" href="precompiled/assets/css/app.css">
     <link id="theme-sheet" rel="stylesheet" href="precompiled/assets/css/core.css">
@@ -89,8 +90,8 @@
                 <div class="columns is-vcentered">
                     <div class="column is-5 is-header-caption">
                         <h1 style="font-size:32px;" class="title main-title">
-                            COLD EMAILS THAT CONVERT.
-                            PROCESSES THAT SIMPLIFY.
+                            Cold Emails that CONVERT.
+                            Processes that SIMPLIFY.
                         </h1>
                         <h2 class="subtitle is-5 light-text">
                             It’s time to up your outreach game.
@@ -107,7 +108,7 @@
                     </div>
                     <div class="column is-9 is-offset-1">
                         <figure class="image is-3by2 hero-figure is-pushed">
-                            <img class="has-light-shadow" src="precompiled/assets/img/graphics/apps/app-2-core.png" data-base-url="precompiled/assets/img/graphics/apps/app-2" data-extension=".png" alt="">
+                            <img class="has-light-shadow" style="border-radius: 2rem;" src="precompiled/assets/img/app1.jpg" data-base-url="precompiled/assets/img/graphics/apps/app-2" data-extension=".png" alt="">
                         </figure>
                     </div>
 
@@ -123,8 +124,8 @@
             <div class="section-title-wrapper has-text-centered">
                 <div class="bg-number">1</div>
                 <h2 class="section-title-landing">
-                    HYPEMAIL HANDLES EVERYTHING.
-                    YOU REAP THE REWARDS.
+                    Hypmail Handles Everything.
+                    You Reap the REWARD.
                 </h2>
             </div>
 
@@ -136,11 +137,11 @@
                         <div class="square-icon-box is-landing primary">
                             <div class="icon-box-wrapper">
                                 <div class="icon-box">
-                                    <i class="material-icons">work</i>
+                                    <i class="material-icons">mail</i>
                                 </div>
                             </div>
                             <div class="box-title">
-                                INTELLIGENT EMAIL AUTOMATION
+                                Intelligent Email Automation
                             </div>
                             <div class="box-text is-tablet-padded body-color">
                                 Emails respond to the responses of your prospects,
@@ -156,7 +157,7 @@
                                 </div>
                             </div>
                             <div class="box-title">
-                                SIMPLIFIED SEQUENCING                            </div>
+                                Simplified Sequencing                           </div>
                             <div class="box-text is-tablet-padded body-color">
                                 Create email funnels quickly to perfectly fit
                                 the personalized needs of your prospects.
@@ -174,11 +175,11 @@
                         <div class="square-icon-box is-landing primary">
                             <div class="icon-box-wrapper">
                                 <div class="icon-box">
-                                    <i class="material-icons">chat_bubble</i>
+                                    <i class="material-icons">alarm_on</i>
                                 </div>
                             </div>
                             <div class="box-title">
-                                ENHANCED SPEED
+                                Enhanced Speed
                             </div>
                             <div class="box-text is-tablet-padded body-color">
                                 Simplicity means speed. Spend time closing,
@@ -191,11 +192,11 @@
                         <div class="square-icon-box is-landing primary">
                             <div class="icon-box-wrapper">
                                 <div class="icon-box">
-                                    <i class="material-icons">https</i>
+                                    <i class="material-icons">trending_up</i>
                                 </div>
                             </div>
                             <div class="box-title">
-                                HIGHER CONVERSION
+                                Higher Conversion
                             </div>
                             <div class="box-text is-tablet-padded body-color">
                                 Emails that warm prospects. Funnels that
@@ -223,7 +224,7 @@ intrigue. And automation that excites.
                 <div class="column is-4 is-offset-1 is-hidden-desktop is-hidden-tablet">
                     <div class="icon-subtitle"><i class="im im-icon-Calendar-4"></i></div>
                     <div class="title quick-feature is-handwritten text-bold">
-                        <h2>HYPEMAIL DOES IT FOR YOU.</h2>
+                        <h2>Hypemail does it for YOU.</h2>
                         <div class="bg-number">2</div>
                     </div>
                     <div class="title-divider is-small"></div>
@@ -240,7 +241,7 @@ intrigue. And automation that excites.
                 <div class="column is-4 is-offset-1 is-hidden-mobile">
                     <div class="icon-subtitle"><i class="im im-icon-Calendar-4"></i></div>
                     <div class="title quick-feature is-handwritten text-bold">
-                        <h2>HYPEMAIL DOES IT FOR YOU.</h2>
+                        <h2>Hypemail does it for YOU.</h2>
                         <div class="bg-number">2</div>
                     </div>
                     <div class="title-divider is-small"></div>
@@ -260,7 +261,7 @@ intrigue. And automation that excites.
                 <div class="column is-4 is-offset-1">
                     <div class="icon-subtitle"><i class="im im-icon-Upload-toCloud"></i></div>
                     <div class="title quick-feature is-handwritten text-bold">
-                        <h2>IN-DEPTH PERSONALIZATION</h2>
+                        <h2>In-depth Personalization</h2>
                         <div class="bg-number">3</div>
                     </div>
                     <div class="title-divider is-small"></div>
@@ -286,7 +287,7 @@ intrigue. And automation that excites.
                 <div class="column is-4 is-offset-1 is-hidden-desktop is-hidden-tablet">
                     <div class="icon-subtitle"><i class="im im-icon-Security-Check"></i></div>
                     <div class="title quick-feature is-handwritten text-bold">
-                        <h2>BUILD A BETTER SEQUENCE, SIMPLY</h2>
+                        <h2>Build a Better Sequence Simple</h2>
                         <div class="bg-number">4</div>
                     </div>
                     <div class="title-divider is-small"></div>
@@ -302,7 +303,7 @@ intrigue. And automation that excites.
                 <div class="column is-4 is-offset-1 is-hidden-mobile">
                     <div class="icon-subtitle"><i class="im im-icon-Security-Check"></i></div>
                     <div class="title quick-feature is-handwritten text-bold">
-                        <div>BUILD A BETTER SEQUENCE, SIMPLY</div>
+                        <div>Build a Better Sequence Simple</div>
                         <div class="bg-number">4</div>
                     </div>
                     <div class="title-divider is-small"></div>
@@ -321,7 +322,7 @@ intrigue. And automation that excites.
                 <div class="column is-4 is-offset-1">
                     <div class="icon-subtitle"><i class="im im-icon-Arrow-Refresh"></i></div>
                     <div class="title quick-feature is-handwritten text-bold">
-                        <h2>SPEED AND CONVENIENCE COME STANDARD</h2>
+                        <h2>Speed and Convenience Come Standard</h2>
                         <div class="bg-number">5</div>
                     </div>
                     <div class="title-divider is-small"></div>
@@ -654,7 +655,7 @@ intrigue. And automation that excites.
     <!-- Dark footer -->
     <footer id="dark-footer" class="footer footer-dark">
         <div class="container">
-            <div class="columns">
+            <!-- <div class="columns">
                 <div class="column">
                     <div class="footer-column">
                         <div class="footer-header">
@@ -726,8 +727,43 @@ intrigue. And automation that excites.
                             </nav>
                         </div>
                         <div class="copyright">
-                            <span class="moto light-text">Designed and coded with <i class="fa fa-heart color-red"></i> by CSS Ninja.</span>
+                            <span class="moto light-text">Copyrights © All Rights Reserved by Ionio.io</span>
                         </div>
+                    </div>
+                </div>
+            </div> -->
+            <div class="columns">
+                <div class="column">
+                    <div class="footer-column">
+                        <div class="footer-logo" style="display: inline-block;">
+                            <p style="font-size: 25px; font-weight: 600; font-family: 'Raleway', sans-serif;">HYPEMAIL</p>
+                        </div>
+                        <div class="footer-header" style="display: inline-block; margin-left: 2rem;">
+                            <nav class="level is-mobile">
+                                <div class="level-left level-social">
+                                    <a href="#" class="level-item">
+                                        <span class="icon"><i class="fa fa-facebook"></i></span>
+                                    </a>
+                                    <a href="#" class="level-item">
+                                        <span class="icon"><i class="fa fa-twitter"></i></span>
+                                    </a>
+                                    <a href="#" class="level-item">
+                                        <span class="icon"><i class="fa fa-linkedin"></i></span>
+                                    </a>
+                                    <a href="#" class="level-item">
+                                        <span class="icon"><i class="fa fa-dribbble"></i></span>
+                                    </a>
+                                    <a href="#" class="level-item">
+                                        <span class="icon"><i class="fa fa-github"></i></span>
+                                    </a>
+                                </div>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+                <div class="column" style="display: flex; justify-content: center; align-items: center;">
+                    <div class="copyright" >
+                        <span class="moto light-text">Copyrights © All Rights Reserved by <span class="primary-text text-bolder">Ionio.io</span></span>
                     </div>
                 </div>
             </div>
