Change to sentance casing || link to ionio.io

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="icon" href="./precompiled/assets/img/hypeMailLogo.png" type="image/x-icon" />
     <!--Core CSS -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
@@ -31,11 +31,11 @@
             <div class="container">
                 <!-- Brand -->
                 <div class="navbar-brand">
-                    <a class="navbar-item"  href="/">
+                    <a class="navbar-item" href="/">
                         <p style="font-size: 25px; font-weight: 600; font-family: 'Raleway', sans-serif;">HYPEMAIL</p>
                     </a>
 
-                    
+
 
                     <!-- Responsive toggle -->
                     <div class="custom-burger" data-target="">
@@ -47,7 +47,7 @@
                                         <i class="icon-line-center"></i>
                                         <i class="icon-line-bottom"></i>
                                     </span>
-                            </span>
+                                </span>
                             </span>
                         </a>
                     </div>
@@ -75,7 +75,8 @@
                     <div class="navbar-end">
                         <!-- Signup button -->
                         <div class="navbar-item">
-                            <a id="#signup-btn" href="kit1-signup.html" class="button button-signup btn-outlined is-bold btn-align light-btn rounded raised">
+                            <a id="#signup-btn" href="kit1-signup.html"
+                                class="button button-signup btn-outlined is-bold btn-align light-btn rounded raised">
                                 Sign up
                             </a>
                         </div>
@@ -89,25 +90,29 @@
                 <div class="columns is-vcentered">
                     <div class="column is-5 is-header-caption">
                         <h1 style="font-size:32px;" class="title main-title">
-                            Cold Emails that CONVERT.
-                            Processes that SIMPLIFY.
+                            Cold emails that convert.
+                            Processes that simplify.
                         </h1>
                         <h2 class="subtitle is-5 light-text">
                             It’s time to up your outreach game.
                             No more friction. No more time wasted.
-                            Just conversion-creating cold emails.                        </h2>
+                            Just conversion-creating cold emails. </h2>
                         <p class="buttons">
-                            <a href="#features" class="button button-cta btn-align btn-outlined is-bold light-btn rounded z-index-2">
+                            <a href="#features"
+                                class="button button-cta btn-align btn-outlined is-bold light-btn rounded z-index-2">
                                 Get Started
                             </a>
-                            <a href="#" class="button button-cta btn-align btn-outlined is-bold light-btn rounded z-index-2">
+                            <a href="#"
+                                class="button button-cta btn-align btn-outlined is-bold light-btn rounded z-index-2">
                                 Learn More
                             </a>
                         </p>
                     </div>
                     <div class="column is-9 is-offset-1">
                         <figure class="image is-3by2 hero-figure is-pushed">
-                            <img class="has-light-shadow" style="border-radius: 2rem;" src="precompiled/assets/img/app1.jpg" data-base-url="precompiled/assets/img/graphics/apps/app-2" data-extension=".png" alt="">
+                            <img class="has-light-shadow" style="border-radius: 2rem;"
+                                src="precompiled/assets/img/app1.jpg"
+                                data-base-url="precompiled/assets/img/graphics/apps/app-2" data-extension=".png" alt="">
                         </figure>
                     </div>
 
@@ -123,8 +128,8 @@
             <div class="section-title-wrapper has-text-centered">
                 <div class="bg-number">1</div>
                 <h2 class="section-title-landing">
-                    Hypmail Handles Everything.
-                    You Reap the REWARD.
+                    Hypemail handles everything.
+                    You reap the reward.
                 </h2>
             </div>
 
@@ -144,7 +149,7 @@
                             </div>
                             <div class="box-text is-tablet-padded body-color">
                                 Emails respond to the responses of your prospects,
-                                ensuring they get the perfect messaging.                            </div>
+                                ensuring they get the perfect messaging. </div>
                         </div>
                     </div>
                     <!-- Animated Icon box -->
@@ -156,7 +161,7 @@
                                 </div>
                             </div>
                             <div class="box-title">
-                                Simplified Sequencing                           </div>
+                                Simplified Sequencing </div>
                             <div class="box-text is-tablet-padded body-color">
                                 Create email funnels quickly to perfectly fit
                                 the personalized needs of your prospects.
@@ -199,7 +204,7 @@
                             </div>
                             <div class="box-text is-tablet-padded body-color">
                                 Emails that warm prospects. Funnels that
-intrigue. And automation that excites.
+                                intrigue. And automation that excites.
                             </div>
                         </div>
                     </div>
@@ -223,7 +228,7 @@ intrigue. And automation that excites.
                 <div class="column is-4 is-offset-1 is-hidden-desktop is-hidden-tablet">
                     <div class="icon-subtitle"><i class="im im-icon-Calendar-4"></i></div>
                     <div class="title quick-feature is-handwritten text-bold">
-                        <h2>Hypemail does it for YOU.</h2>
+                        <h2>Hypemail does it for you.</h2>
                         <div class="bg-number">2</div>
                     </div>
                     <div class="title-divider is-small"></div>
@@ -234,13 +239,15 @@ intrigue. And automation that excites.
                 </div>
 
                 <div class="column is-6 has-text-centered">
-                    <img class="featured-svg" src="precompiled/assets/img/graphics/widgets/mini-widget-1-core.png" data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-1" data-extension=".png" alt="">
+                    <img class="featured-svg" src="precompiled/assets/img/graphics/widgets/mini-widget-1-core.png"
+                        data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-1" data-extension=".png"
+                        alt="">
                 </div>
 
                 <div class="column is-4 is-offset-1 is-hidden-mobile">
                     <div class="icon-subtitle"><i class="im im-icon-Calendar-4"></i></div>
                     <div class="title quick-feature is-handwritten text-bold">
-                        <h2>Hypemail does it for YOU.</h2>
+                        <h2>Hypemail does it for you.</h2>
                         <div class="bg-number">2</div>
                     </div>
                     <div class="title-divider is-small"></div>
@@ -271,7 +278,9 @@ intrigue. And automation that excites.
                 </div>
 
                 <div class="column is-6 is-offset-1 has-text-centered">
-                    <img class="featured-svg" src="precompiled/assets/img/graphics/widgets/mini-widget-2-core.png" data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-2" data-extension=".png" alt="">
+                    <img class="featured-svg" src="precompiled/assets/img/graphics/widgets/mini-widget-2-core.png"
+                        data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-2" data-extension=".png"
+                        alt="">
                 </div>
             </div>
         </div>
@@ -286,7 +295,7 @@ intrigue. And automation that excites.
                 <div class="column is-4 is-offset-1 is-hidden-desktop is-hidden-tablet">
                     <div class="icon-subtitle"><i class="im im-icon-Security-Check"></i></div>
                     <div class="title quick-feature is-handwritten text-bold">
-                        <h2>Build a Better Sequence Simple</h2>
+                        <h2>Build a better sequence simple</h2>
                         <div class="bg-number">4</div>
                     </div>
                     <div class="title-divider is-small"></div>
@@ -296,13 +305,15 @@ intrigue. And automation that excites.
                 </div>
 
                 <div class="column is-6 has-text-centered">
-                    <img class="featured-svg" src="precompiled/assets/img/graphics/widgets/mini-widget-3-core.png" data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-3" data-extension=".png" alt="">
+                    <img class="featured-svg" src="precompiled/assets/img/graphics/widgets/mini-widget-3-core.png"
+                        data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-3" data-extension=".png"
+                        alt="">
                 </div>
 
                 <div class="column is-4 is-offset-1 is-hidden-mobile">
                     <div class="icon-subtitle"><i class="im im-icon-Security-Check"></i></div>
                     <div class="title quick-feature is-handwritten text-bold">
-                        <div>Build a Better Sequence Simple</div>
+                        <div>Build a better sequence simple</div>
                         <div class="bg-number">4</div>
                     </div>
                     <div class="title-divider is-small"></div>
@@ -321,7 +332,7 @@ intrigue. And automation that excites.
                 <div class="column is-4 is-offset-1">
                     <div class="icon-subtitle"><i class="im im-icon-Arrow-Refresh"></i></div>
                     <div class="title quick-feature is-handwritten text-bold">
-                        <h2>Speed and Convenience Come Standard</h2>
+                        <h2>Speed and convenience come standard</h2>
                         <div class="bg-number">5</div>
                     </div>
                     <div class="title-divider is-small"></div>
@@ -331,7 +342,9 @@ intrigue. And automation that excites.
                 </div>
 
                 <div class="column is-6 is-offset-1 has-text-centered">
-                    <img class="featured-svg-lg" src="precompiled/assets/img/graphics/widgets/mini-widget-4-core.png" data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-4" data-extension=".png" alt="">
+                    <img class="featured-svg-lg" src="precompiled/assets/img/graphics/widgets/mini-widget-4-core.png"
+                        data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-4" data-extension=".png"
+                        alt="">
                 </div>
             </div>
             <!-- <div class="has-text-centered is-title-reveal pt-20 pb-20">
@@ -640,7 +653,8 @@ intrigue. And automation that excites.
                                     </div>
                                 </div> -->
                                 <div class="column is-4">
-                                    <button type="submit" value="Send" class="button button-cta btn-align primary-btn btn-outlined is-bold rounded raised no-lh">Sign
+                                    <button type="submit" value="Send"
+                                        class="button button-cta btn-align primary-btn btn-outlined is-bold rounded raised no-lh">Sign
                                         me up</button>
                                 </div>
                             </div>
@@ -735,7 +749,8 @@ intrigue. And automation that excites.
                 <div class="column">
                     <div class="footer-column">
                         <div class="footer-logo" style="display: inline-block;">
-                            <p style="font-size: 25px; font-weight: 600; font-family: 'Raleway', sans-serif;">HYPEMAIL</p>
+                            <p style="font-size: 25px; font-weight: 600; font-family: 'Raleway', sans-serif;">HYPEMAIL
+                            </p>
                         </div>
                         <div class="footer-header" style="display: inline-block; margin-left: 2rem;">
                             <nav class="level is-mobile">
@@ -761,8 +776,9 @@ intrigue. And automation that excites.
                     </div>
                 </div>
                 <div class="column" style="display: flex; justify-content: center; align-items: center;">
-                    <div class="copyright" >
-                        <span class="moto light-text">Copyrights © All Rights Reserved by <span class="primary-text text-bolder">Ionio.io</span></span>
+                    <div class="copyright">
+                        <span class="moto light-text">Copyrights © All Rights Reserved by <a
+                                href="https://www.ionio.io">Ionio.io</a>
                     </div>
                 </div>
             </div>
@@ -771,7 +787,7 @@ intrigue. And automation that excites.
     <!-- /Dark footer -->
     <!-- Back To Top Button -->
     <div id="backtotop"><a href="#"></a></div>
-  
+
     <!-- Concatenated jQuery and plugins -->
     <script src="precompiled/assets/js/app.js"></script>
 
